# kelp

./: .gitattributes  .gitignore  .readthedocs.yml  .rtd-environment.yml  .travis.yml  MANIFEST  MANIFEST.in  README.md  README.rst  environment.yml  example.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_tests.yml  docs.yml  python-package-conda.yml  requirements.txt
docs/: _kelp_vis.html  _kelp_vis.py  conf.py  index.rst  rtd-pip-requirements
docs/_static/: kelp.css
docs/gallery/: 01_Example_map.py
docs/kelp/: albedo_redistribution.rst  background.rst  gettingstarted.rst  index.rst  installation.rst  interactive.rst  kelp_geoviews.html  kelp_geoviews.py  optimization.rst  reflected.rst
examples/gallery/: 01_Example_map.ipynb  index.ipynb
kelp/: __init__.py  core.py  fast.pyx  params.py  registries.py  theano.py
kelp/data/: filters.json  initp_lmax2.json  planets.json  tess_response.txt
kelp/jax/: __init__.py  jax.py
kelp/tests/: test_core.py  test_jax.py  test_theano.py
kelp/theano/: __init__.py  theano.py
licenses/: LICENSE.rst
notebooks/: demo.ipynb  fit_lmax2.ipynb
notebooks/vis/: phase_curve_lmax3.ipynb  temperature_map.ipynb  temperature_map_lmax3.ipynb
