[metadata]
name = kelp
author = Brett M. Morris
author_email = morrisbrettm@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/bmorris3/kelp
description = Photometric phase curves of exoplanets
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = bmorris3/kelp

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    matplotlib
    scipy

[options.extras_require]
test =
    pytest < 6
    pytest-astropy
    batman-package
    exoplanet
docs =
    sphinx<3.5.0
    sphinx-astropy
    batman-package
    emcee
    corner
    tqdm
    selenium

[options.package_data]
kelp = data/*

[tool:pytest]
testpaths = "kelp" "docs"
astropy_header = true
doctest_plus = disabled 
text_file_format = rst
addopts = --doctest-rst
filterwarnings =
    ignore:numpy.ufunc size changed:RuntimeWarning
    ignore:numpy.ndarray size changed:RuntimeWarning
norecursedirs =
    "docs[\/]_build"

[coverage:run]
omit =
    kelp/_astropy_init*
    kelp/conftest.py
    kelp/*setup_package*
    kelp/tests/*
    kelp/*/tests/*
    kelp/extern/*
    kelp/version*
    */kelp/_astropy_init*
    */kelp/conftest.py
    */kelp/*setup_package*
    */kelp/tests/*
    */kelp/*/tests/*
    */kelp/extern/*
    */kelp/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
